--- a/index.html
+++ b/index.html
@@ -9,25 +9,30 @@
     <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)"/>
     <link rel="stylesheet" href="stylesheets/pygment_trac.css"/>
 
+
+
     <script type="text/javascript" src="javascripts/modernizr.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
+
+    <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery/jquery-1.4.4.js"></script>
+    <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.ui/1.8.9/jquery-ui.min.js"></script>
     <script type="text/javascript">
-      $(document).ready(function () {
-        $('#main_content').headsmart()
-      })
+        $(function () {
+            $("#myTabs").tabs();
+        });
     </script>
+
     <title>Endlessbummer by endlessbummer</title>
   </head>
 
   <body>
-    <a id="forkme_banner" href="https://github.com/endlessbummer/endlessbummer">View on GitHub</a>
     <div class="shell">
 
       <header>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <h1>Endlessbummer</h1>
+            <h1>Endless bummer</h1>
             <h2></h2>
           </span>
           <span class="left-tail"></span>
@@ -37,7 +42,7 @@
 
       <section id="downloads">
         <span class="inner">
-          <a href="https://github.com/endlessbummer/endlessbummer/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/endlessbummer/endlessbummer/tarball/master" class="tgz"><em>download</em> .TGZ</a>
+          <a class="zip"></a><a class="tgz"></a>
         </span>
       </section>
 
@@ -46,37 +51,42 @@
 
 
       <section id="main_content">
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<h1 class="header-level-1">A Bleak and Meaningless Festival</h1>
+<p>4 days of the worst music festival in Edmonton. Throughout the soul crushing corridor that is the first weekend of September, Thursday the 5th to Sunday the 8th, celebrate Fall's agonized and miserable death-grip on our doomed Summer, and bow before the oncoming bummer. </p>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+    <div class="content">
+        <div id="myTabs" style="width:500px;">
+            <ul>
+                <li><a href="#tab-1">Bands</a></li>
+                <li><a href="#tab-2">Venues</a></li>
+                <li><a href="#tab-3">Schedule</a></li>
+            </ul>
+            <div id="tab-1">
+                <p>
+                  Stay Tuned for a list of Bands
 
-<pre><code>$ cd your_repo_root/repo_name
+                </p>
+            </div>
+            <div id="tab-2">
+                <p>
+			Stay Tuned for a list of venues
+                </p>
+            </div>
+            <div id="tab-3">
+                <p>
+                   Stay Tuned for the Complete Endless Bummer Schedule
+                </p>
+            </div>
+        </div>
+    </div>
+
+
+<!-- <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
 $ git checkout gh-pages
-</code></pre>
+</code></pre> -->
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
 
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
 
       <footer>
@@ -95,4 +105,5 @@ $ git checkout gh-pages
 
     
   </body>
+
 </html>
