--- a/index.html
+++ b/index.html
@@ -450,7 +450,10 @@
   
             </div>
             <div id="tab-3">
-            </div>    
+            <p>
+            Stay Tuned for the Full Endless Bummer Festival Schedule
+            </p>
+            </div>       
           </div>
         </div>
     </div>
