--- a/index.html
+++ b/index.html
@@ -84,19 +84,19 @@
                 <h3>Ghibli - Edmonton</h3>
                 <div>
                   <p>
-                  <a href="ghibli.bandcamp.com" target="_blank" />ghibli.bandcamp.com</a>
+                  <a href="http://ghibli.bandcamp.com" target="_blank" />ghibli.bandcamp.com</a>
                   </p>
                 </div>
                 <h3>Field and Stream - Edmonton</h3>
                 <div>
                   <p>
-                  <a href="fieldandstream.bandcamp.com"  target="_blank" />fieldandstream.bandcamp.com</a>
+                  <a href="http://fieldandstream.bandcamp.com"  target="_blank" />fieldandstream.bandcamp.com</a>
                   </p>
                 </div>
                 <h3>Lab Coast - Calgary</h3>
                 <div>
                   <p>
-                  <a href="labcoast.bandcamp.com" target="_blank"  />labcoast.bandcamp.com</a>                  </p>
+                  <a href="http://labcoast.bandcamp.com" target="_blank"  />labcoast.bandcamp.com</a>                  </p>
                 </div>
                 <h3>Renny Wilson - Edmonton</h3>
                 <div>
@@ -106,25 +106,25 @@
                 <h3>Powder Blue - Saskatoon</h3>
                 <div>
                   <p>
-                  <a href="www.powder-blue.ca/"  target="_blank" />www.powder-blue.ca/</a>
+                  <a href="http://www.powder-blue.ca/"  target="_blank" />www.powder-blue.ca/</a>
                   </p>
                 </div>
                 <h3>Catgut - Edmonton</h3>
                 <div>
                   <p>
-                  <a href="catgutcatgut.bandcamp.com/"  target="_blank" >catgutcatgut.bandcamp.com/</a>  
+                  <a href="http://catgutcatgut.bandcamp.com/"  target="_blank" >catgutcatgut.bandcamp.com/</a>  
                   </p>
                 </div>
                 <h3>Fist City - Calgary</h3>
                 <div>
                   <p>
-                  <a href="fistcity.bandcamp.com"  target="_blank" />fistcity.bandcamp.com</a>    
+                  <a href="http://fistcity.bandcamp.com"  target="_blank" />fistcity.bandcamp.com</a>    
                   </p>
                 </div>
                 <h3>Brazillian Money - Edmonton</h3>
                 <div>
                   <p>
-                  <a href="brazilianmoney.bandcamp.com"  target="_blank" />brazilianmoney.bandcamp.com</a>   
+                  <a href="http://brazilianmoney.bandcamp.com"  target="_blank" />brazilianmoney.bandcamp.com</a>   
                   </p>
                 </div>
                 <h3>Misery Mountain Boys - Edmonton</h3>
@@ -136,7 +136,7 @@
                 <h3>Mitchmatic - Edmonton</h3>
                 <div>
                   <p>
-                  <a href="mitchmatic.bandcamp.com"  target="_blank" />mitchmatic.bandcamp.com</a>   
+                  <a href="http://mitchmatic.bandcamp.com"  target="_blank" />mitchmatic.bandcamp.com</a>   
                   </p>
                 </div>
                 <h3>Matthew A. Wilkinson - Grande Prairie</h3>
@@ -148,74 +148,74 @@
                 <h3>The Diet - Calgary</h3>
                 <div>
                   <p>
-                  <a href="manchildcalgary.bandcamp.com"  target="_blank" />manchildcalgary.bandcamp.com</a>   
+                  <a href="http://manchildcalgary.bandcamp.com"  target="_blank" />manchildcalgary.bandcamp.com</a>   
                   </p>
                 </div>
                 <h3>The Faps - Saskatoon</h3>
                 <div>
                   <p>
-                  <a href="thefaps.bandcamp.com"  target="_blank" />thefaps.bandcamp.com</a>   
+                  <a href="http://thefaps.bandcamp.com"  target="_blank" />thefaps.bandcamp.com</a>   
                   </p>
                 </div>
                 <h3>Travis Bretzer - Edmonton</h3>
                 <div>
                   <p>
-                  <a href="www.mexicansummer.com/shop/travis-bretzer-making-love"  target="_blank" />www.mexicansummer.com/shop/travis-bretzer-making-love</a>   
+                  <a href="http://www.mexicansummer.com/shop/travis-bretzer-making-love"  target="_blank" />www.mexicansummer.com/shop/travis-bretzer-making-love</a>   
                   </p>
                 </div>
                 <h3>Rattle Rattle - Edmonton</h3>
                 <div>
                   <p>
-                  <a href="rattlerattle.bandcamp.com/"  target="_blank" />rattlerattle.bandcamp.com/</a>   
+                  <a href="http://rattlerattle.bandcamp.com/"  target="_blank" />rattlerattle.bandcamp.com/</a>   
                   </p>
                 </div>
 
                 <h3>Catholic Girls - Calgary</h3>
                 <div>
                   <p>
-                  <a href="www.facebook.com/catholicgirlsband"  target="_blank" />www.facebook.com/catholicgirlsband</a>   
+                  <a href="http://www.facebook.com/catholicgirlsband"  target="_blank" />www.facebook.com/catholicgirlsband</a>   
                   </p>
                 </div>
 
                 <h3>Gary Debussy - Edmonton</h3>
                 <div>
                   <p>
-                  <a href="garydebussy.bandcamp.com"  target="_blank" />garydebussy.bandcamp.com</a>   
+                  <a href="http://garydebussy.bandcamp.com"  target="_blank" />garydebussy.bandcamp.com</a>   
                   </p>
                 </div>
 
                 <h3>Arrowz - Edmonton</h3>
                 <div>
                   <p>
-                  <a href="arrowz.bandcamp.com"  target="_blank" />arrowz.bandcamp.com</a>   
+                  <a href="http://arrowz.bandcamp.com"  target="_blank" />arrowz.bandcamp.com</a>   
                   </p>
                 </div>
 
                 <h3>Smokey - Edmonton</h3>
                 <div>
                   <p>
-                  <a href="smokeycoon.bandcamp.com/album/smokey"  target="_blank" />smokeycoon.bandcamp.com/album/smokey</a>   
+                  <a href="http://smokeycoon.bandcamp.com/album/smokey"  target="_blank" />smokeycoon.bandcamp.com/album/smokey</a>   
                   </p>
                 </div>
 
                 <h3>Ghost Cousin - Edmonton</h3>
                 <div>
                   <p>
-                  <a href="ghostcousin.bandcamp.com"  target="_blank" />ghostcousin.bandcamp.com</a>   
+                  <a href="http://ghostcousin.bandcamp.com"  target="_blank" />ghostcousin.bandcamp.com</a>   
                   </p>
                 </div>
 
                 <h3>Greyscreen - Calgary</h3>
                 <div>
                   <p>
-                  <a href="greyscreen.bandcamp.com"  target="_blank" />greyscreen.bandcamp.com</a>   
+                  <a href="http://greyscreen.bandcamp.com"  target="_blank" />greyscreen.bandcamp.com</a>   
                   </p>
                 </div>
 
                 <h3>Tyler Butler - Edmonton</h3>
                 <div>
                   <p>
-                  <a href="tylerbutler.bandcamp.com"  target="_blank" />tylerbutler.bandcamp.com</a>   
+                  <a href="http://tylerbutler.bandcamp.com"  target="_blank" />tylerbutler.bandcamp.com</a>   
                   </p>
                 </div>
 
@@ -229,35 +229,35 @@
                 <h3>Scrapbooker - Edmonton</h3>
                 <div>
                   <p>
-                  <a href="scrapbooker.bandcamp.com"  target="_blank" />scrapbooker.bandcamp.com</a> 
+                  <a href="http://scrapbooker.bandcamp.com"  target="_blank" />scrapbooker.bandcamp.com</a> 
                   </p>
                 </div>
 
                 <h3>Book of Caverns - Edmonton</h3>
                 <div>
                   <p>
-                  <a href="bookofcaverns.bandcamp.com"  target="_blank" />bookofcaverns.bandcamp.com</a>
+                  <a href="http://bookofcaverns.bandcamp.com"  target="_blank" />bookofcaverns.bandcamp.com</a>
                   </p>
                 </div> 
 
                 <h3>Cold Water - Calgary</h3>
                 <div>
                   <p>
-                  <a href="coldwater.bandcamp.com/"  target="_blank" />coldwater.bandcamp.com/</a>
+                  <a href="http://coldwater.bandcamp.com/"  target="_blank" />coldwater.bandcamp.com/</a>
                   </p>
                 </div>
  
                 <h3>Wizards - Saskatoon</h3>
                 <div>
                   <p>
-                  <a href="wizardmusic.bandcamp.com"  target="_blank" />wizardmusic.bandcamp.com</a>
+                  <a href="http://wizardmusic.bandcamp.com"  target="_blank" />wizardmusic.bandcamp.com</a>
                   </p>
                 </div>
  
                 <h3>The Strugglefucks - Edmonton</h3>
                 <div>
                   <p>
-                  <a href="strugglefucks.bandcamp.com"  target="_blank" />strugglefucks.bandcamp.com</a>
+                  <a href="http://strugglefucks.bandcamp.com"  target="_blank" />strugglefucks.bandcamp.com</a>
                   </p>
                 </div>
  
@@ -271,56 +271,56 @@
                 <h3>Flint - Edmonton</h3>
                 <div>
                   <p>
-                  <a href="flint.bandcamp.com"  target="_blank" />flint.bandcamp.com</a>
+                  <a href="http://flint.bandcamp.com"  target="_blank" />flint.bandcamp.com</a>
                   </p>
                 </div>
  
                 <h3>Todos Caeran - Edmonton</h3>
                 <div>
                   <p>
-                  <a href="todoscaeran.tumblr.com"  target="_blank" />todoscaeran.tumblr.com</a>
+                  <a href="http://todoscaeran.tumblr.com"  target="_blank" />todoscaeran.tumblr.com</a>
                   </p>
                 </div>
  
                 <h3>Marlaena Moore - Edmonton</h3>
                 <div>
                   <p>
-                  <a href="marlaenamoore.bandcamp.com"  target="_blank" />marlaenamoore.bandcamp.com</a>
+                  <a href="http://marlaenamoore.bandcamp.com"  target="_blank" />marlaenamoore.bandcamp.com</a>
                   </p>
                 </div>
  
                 <h3>Desiderata - Edmonton</h3>
                 <div>
                   <p>
-                  <a href="desiderata.bandcamp.com"  target="_blank" />desiderata.bandcamp.com</a>
+                  <a href="http://desiderata.bandcamp.com"  target="_blank" />desiderata.bandcamp.com</a>
                   </p>
                 </div>
  
                 <h3>OJ Pimpson - Edmonton</h3>
                 <div>
                   <p>
-                  <a href="theojpimpsons.bandcamp.com"  target="_blank" />theojpimpsons.bandcamp.com</a>
+                  <a href="http://theojpimpsons.bandcamp.com"  target="_blank" />theojpimpsons.bandcamp.com</a>
                   </p>
                 </div>
  
                 <h3>James Renton - Edmonton</h3>
                 <div>
                   <p>
-                  <a href="firenexttime.bandcamp.com"  target="_blank" />firenexttime.bandcamp.com</a>
+                  <a href="http://firenexttime.bandcamp.com"  target="_blank" />firenexttime.bandcamp.com</a>
                   </p>
                 </div>
 
                 <h3>[WillScott] - Edmonton</h3>
                 <div>
                   <p>
-                  <a href="willscott.bandcamp.com"  target="_blank" />willscott.bandcamp.com</a>
+                  <a href="http://willscott.bandcamp.com"  target="_blank" />willscott.bandcamp.com</a>
                   </p>
                 </div>
 
                 <h3>Meat Force - Edmonton</h3>
                 <div>
                   <p>
-                  <a href="meatforce.bandcamp.com"  target="_blank" />meatforce.bandcamp.com</a>
+                  <a href="http://meatforce.bandcamp.com"  target="_blank" />meatforce.bandcamp.com</a>
                   </p>
                 </div>
 
@@ -334,28 +334,28 @@
                 <h3>Royal Iguana Fur - Grande Prairie</h3>
                 <div>
                   <p>
-                  <a href="theroyaliguanafurs.bandcamp.com"  target="_blank" />theroyaliguanafurs.bandcamp.com</a>
+                  <a href="http://theroyaliguanafurs.bandcamp.com"  target="_blank" />theroyaliguanafurs.bandcamp.com</a>
                   </p>
                 </div>
 
                 <h3>The Archaics - Edmonton</h3>
                 <div>
                   <p>
-                  <a href="thearchaics.bandcamp.com"  target="_blank" />thearchaics.bandcamp.com</a>
+                  <a href="http://thearchaics.bandcamp.com"  target="_blank" />thearchaics.bandcamp.com</a>
                   </p>
                 </div>
 
                 <h3>Zebra Pulse - Edmonton</h3>
                 <div>
                   <p>
-                  <a href="zebrapulse.bandcamp.com"  target="_blank" />zebrapulse.bandcamp.com</a>
+                  <a href="http://zebrapulse.bandcamp.com"  target="_blank" />zebrapulse.bandcamp.com</a>
                   </p>
                 </div>
 
                 <h3>Pigeon Breeders - Edmonton</h3>
                 <div>
                   <p>
-                  <a href="weirdcanada.com/tag/pigeon-breeders"  target="_blank" />weirdcanada.com/tag/pigeon-breeders</a>
+                  <a href="http://weirdcanada.com/tag/pigeon-breeders"  target="_blank" />weirdcanada.com/tag/pigeon-breeders</a>
                   </p>
                 </div>
 
@@ -369,49 +369,49 @@
                 <h3>Surf Kitties - Calgary</h3>
                 <div>
                   <p>
-                  <a href="surfkitties.bandcamp.com"  target="_blank" />surfkitties.bandcamp.com</a>
+                  <a href="http://surfkitties.bandcamp.com"  target="_blank" />surfkitties.bandcamp.com</a>
                   </p>
                 </div>
 
                 <h3>Burrows - Edmonton</h3>
                 <div>
                   <p>
-                  <a href="burrowsing.bandcamp.com"  target="_blank" />burrowsing.bandcamp.com</a>
+                  <a href="http://burrowsing.bandcamp.com"  target="_blank" />burrowsing.bandcamp.com</a>
                   </p>
                 </div>
 
                 <h3>Emma Perri - Edmonton</h3>
                 <div>
                   <p>
-                  <a href="emmaperri.bandcamp.com"  target="_blank" />emmaperri.bandcamp.com</a>
+                  <a href="http://emmaperri.bandcamp.com"  target="_blank" />emmaperri.bandcamp.com</a>
                   </p>
                 </div>
 
                 <h3>Modern Acquatics - Calgary</h3>
                 <div>
                   <p>
-                  <a href="en.wikipedia.org/wiki/Aquatics"  target="_blank" />en.wikipedia.org/wiki/Aquatics</a>
+                  <a href="http://en.wikipedia.org/wiki/Aquatics"  target="_blank" />en.wikipedia.org/wiki/Aquatics</a>
                   </p>
                 </div>
 
                 <h3>Diamond Mind - Edmonton</h3>
                 <div>
                   <p>
-                  <a href="liamtrimble.bandcamp.com"  target="_blank" />liamtrimble.bandcamp.com</a>
+                  <a href="http://liamtrimble.bandcamp.com"  target="_blank" />liamtrimble.bandcamp.com</a>
                   </p>
                 </div>
 
                 <h3>Layne L'Heaureux - Edmonton</h3>
                 <div>
                   <p>
-                  <a href="laynemusic.bandcamp.com"  target="_blank" />laynemusic.bandcamp.com</a>
+                  <a href="http://laynemusic.bandcamp.com"  target="_blank" />laynemusic.bandcamp.com</a>
                   </p>
                 </div>
 
                 <h3>Little Blue - Edmonton</h3>
                 <div>
                   <p>
-                  <a href="littleblue.bandcamp.com"  target="_blank" />littleblue.bandcamp.com</a>
+                  <a href="http://littleblue.bandcamp.com"  target="_blank" />littleblue.bandcamp.com</a>
                   </p>
                 </div>
 
