--- a/index.html
+++ b/index.html
@@ -450,9 +450,8 @@
   
             </div>
             <div id="tab-3">
-            <p>
-            Stay Tuned for the Full Endless Bummer Festival Schedule
-            </p>
+            
+            <img src="images/endless_schedule.jpg" alt="Schedule" />
             </div>       
           </div>
         </div>
