--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
             </div>
             <div id="tab-3">
             
-            <img src="images/endless_schedule.jpg" alt="Schedule" />
+            <img src="images/endless_schedule.jpg" alt="Schedule" width="454px" />
             </div>       
           </div>
         </div>
